# ms-gateway

./: Cargo.toml  build.rs
.design/: tables.sql
docker/mysql/: docker-compose.yml
resources/: application.toml  private_key.pem  public_key.pem
src/: main.rs
src/config/: app_data.rs  application.rs  errors.rs  mod.rs
src/middleware/: verify.rs
src/services/: auth.rs
