[package]
name = "ms-gateway"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = ["mysql", "runtime-actix-rustls", "chrono"] }
env_logger = "0.9.0"
futures-util = "0.3.21"
base64 = "0.13.0"
rsa = "0.6.1"
toml = "0.5.9"
log = { version = "0.4.16", features = ["std"] }
chrono = { version=  "0.4.19", features=["serde"] }
lazy_static = "1.4.0"
sha2 = "0.10.8"
derive_more = "0.99.17"
rs-snowflake = "0.6.0"